# drf-api

./: README.md  db.sqlite3  pyproject.toml
blog_api_project/: settings.py  urls.py
drf_api/: admin.py  apps.py  models.py  serializers.py  tests.py
drf_api/migrations/: 0001_initial.py
